added first sections with image inside the section and demo text

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,41 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <section class="section-1">
+        <div class="container text-center">
+          <!-- Columns row -->
+          <div class="row">
+            <!-- columns with the space of six columnssss -->
+            <div class="col-md-6">
+              <div class="col-md-6">
+                <div class="pray">
+                  <img src="../assets/pexels-photo-1904769.jpeg" alt="Prey" />
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <!-- align tex-tleft -->
+              <div class="panel text-left">
+                <div class="pray">
+                  <h1>Mr. Kings Smite</h1>
+                  <p class="pt-4">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                    saepe qui corrupti magni, debitis numquam fugiat inventore
+                    deserunt facilis, soluta natus.
+                  </p>
+                  <p class="pt-4">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. At
+                    consequatur blanditiis quos, ullam, ratione ipsum architecto
+                    laboriosam, nesciunt ipsa quae dignissimos.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
 
