added second sections

--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,7 @@
     </header>
 
     <main>
+      <!-- Section 1 -->
       <section class="section-1">
         <div class="container text-center">
           <!-- Columns row -->
@@ -126,6 +127,16 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Section 2 -->
+      <section class="section-2">
+        <div class="cover">
+          <div class="content text-center">
+            <h1>Some Feature That Made us Unique</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
           </div>
         </div>
       </section>
