added card with price and button

--- a/src/index.html
+++ b/src/index.html
@@ -139,6 +139,111 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
           </div>
         </div>
+        <!-- container / text-center -->
+        <div class="container-fluid text-center">
+          <div
+            class="numbers d-flex flex-md-row flex-wrap justify-content-center"
+          >
+            <div class="rect">
+              <h1>2345</h1>
+              <p>Happy Client</p>
+            </div>
+            <div class="rect">
+              <h1>6789</h1>
+              <p>Cups Coffee</p>
+            </div>
+            <div class="rect">
+              <h1>1056</h1>
+              <p>Tickets Submitted</p>
+            </div>
+            <div class="rect">
+              <h1>9153</h1>
+              <p>TOtal Projects</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- purchase / text-center -->
+        <div class="purchase text-center">
+          <h1>Purchase Whatever You Want</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam,
+            molestiae aut.
+          </p>
+          <div class="cards">
+            <div class="d-flex flex-row justify-content-center flex-wrap">
+              <!-- first card -->
+              <div class="card">
+                <!-- card-body -->
+                <div class="card-body">
+                  <!-- title -->
+                  <div class="title">
+                    <!-- card-title -->
+                    <h5 class="card-title">PDF</h5>
+                  </div>
+                  <!-- card-text -->
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  </p>
+                  <!-- pricing -->
+                  <div class="pricing">
+                    <h1>€77.88</h1>
+                    <!-- btn-dark / px padding left and right / py padding up qnd down / mb-5 margin-bottom -->
+                    <a href="#" class="btn btn-dark px-5 py-2 mb-5"
+                      >Purchase Now</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <!-- seconde card -->
+              <div class="card">
+                <!-- card-body -->
+                <div class="card-body">
+                  <!-- title -->
+                  <div class="title">
+                    <!-- card-title -->
+                    <h5 class="card-title">E-book</h5>
+                  </div>
+                  <!-- card-text -->
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  </p>
+                  <!-- pricing -->
+                  <div class="pricing">
+                    <h1>€99.88</h1>
+                    <!-- btn-dark / px padding left and right / py padding up qnd down / mb-5 margin-bottom -->
+                    <a href="#" class="btn btn-dark px-5 py-2 mb-5"
+                      >Purchase Now</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <!-- third card -->
+              <div class="card">
+                <!-- card-body -->
+                <div class="card-body">
+                  <!-- title -->
+                  <div class="title">
+                    <!-- card-title -->
+                    <h5 class="card-title">Print Copy</h5>
+                  </div>
+                  <!-- card-text -->
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  </p>
+                  <!-- pricing -->
+                  <div class="pricing">
+                    <h1>€67.79</h1>
+                    <!-- btn-dark / px padding left and right / py padding up qnd down / mb-5 margin-bottom -->
+                    <a href="#" class="btn btn-dark px-5 py-2 mb-5"
+                      >Purchase Now</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
