--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Books</title>
   </head>
   <body>
@@ -195,7 +202,7 @@
                   </div>
                 </div>
               </div>
-              <!-- seconde card -->
+              <!-- second card -->
               <div class="card">
                 <!-- card-body -->
                 <div class="card-body">
@@ -239,6 +246,51 @@
                       >Purchase Now</a
                     >
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Second three -->
+      <section class="section-3 container-fluid p-0 text-center">
+        <!-- columns-row -->
+        <div class="row">
+          <!-- column mediums 12 -->
+          <div class="col-md-12 col-sm-12">
+            <h1>Download Our App For Platform</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+              excepturi nostrum totam nemo accusantium nam a pariatur, ducimus
+              temporibus quibusdam vero eveniet? Omnis commodi atque odit,
+              obcaecati fuga voluptate incidunt!
+            </p>
+          </div>
+        </div>
+        <div class="platform row">
+          <div class="col-md-6 col-sm-12 text-right">
+            <div class="desktop shadow-lg">
+              <div class="d-flex-row justify-content-center">
+                <!-- fa-3x font-size / padding-top py / padding-right -->
+                <i class="fas fa-desktop fa-3x py-2 pr-3"></i>
+                <div class="text text-left">
+                  <!-- padding-top / margin 0 -->
+                  <h3 class="pt-1 m-0">Desktop</h3>
+                  <p class="p-0 m-0">On Website</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 text-left">
+            <div class="desktop shadow-lg">
+              <div class="d-flex-row justify-content-center">
+                <!-- fa-3x font-size / padding-top py / padding-right -->
+                <i class="fas fa-mobile-alt fa-3x py-2 pr-3"></i>
+                <div class="text text-left">
+                  <!-- padding-top / margin 0 -->
+                  <h3 class="pt-1 m-0">On Mobile</h3>
+                  <p class="p-0 m-0">On Play Store</p>
                 </div>
               </div>
             </div>
