--- a/src/index.html
+++ b/src/index.html
@@ -297,9 +297,187 @@
           </div>
         </div>
       </section>
+
+      <!-- Section Four -->
+      <section class="section-4">
+        <div class="container text-center">
+          <h1 class="text-dark">What out Reader's Say About Us</h1>
+          <p class="text-secondary">Lorem ipsum dolor sit amet.</p>
+        </div>
+
+        <div class="team row">
+          <div class="col-md-4 col-12 text-center">
+            <div class="card mr-2 d-inline-block shadow-lg">
+              <div class="card-img-top">
+                <img
+                  src="../assets/UI-face-2.jpeg"
+                  alt="Member"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="card-body">
+                <h3 class="card-title">Blalock Jolene</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Aperiam sunt harum necessitatibus sit voluptatem quasi eius
+                  eaque repellendus vitae, nostrum fugiat reprehenderit officiis
+                  ab recusandae porro eum in eveniet mollitia!
+                </p>
+                <a href="#" class="text-secodary text-decoration-none"
+                  >Go Somewhere</a
+                >
+
+                <p class="text-black-50">CEO at Google</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-12">
+            <!-- Carousel Started -->
+            <div
+              id="carouselExampleSlidesOnly"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active text-center">
+                  <!-- Card 2 -->
+
+                  <div class="card mr-2 d-inline-block shadow-lg">
+                    <div class="card-img-top">
+                      <img
+                        src="../assets/UI-face-1.jpeg"
+                        alt="Member"
+                        class="img-fluid"
+                      />
+                    </div>
+                    <div class="card-body">
+                      <h3 class="card-title">Mark Allen</h3>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Aperiam sunt harum necessitatibus sit voluptatem
+                        quasi eius eaque repellendus vitae, nostrum fugiat
+                        reprehenderit officiis ab recusandae porro eum in
+                        eveniet mollitia!
+                      </p>
+                      <a href="#" class="text-secodary text-decoration-none"
+                        >Go Somewhere</a
+                      >
+
+                      <p class="text-black-50">CEO at Google</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <!-- Card 3 -->
+                  <div class="card mr-2 d-inline-block shadow-lg">
+                    <div class="card-img-top">
+                      <img
+                        src="../assets/UI-face-4.jpeg"
+                        alt="Member"
+                        class="img-fluid"
+                      />
+                    </div>
+                    <div class="card-body">
+                      <h3 class="card-title">Ana Allen</h3>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Aperiam sunt harum necessitatibus sit voluptatem
+                        quasi eius eaque repellendus vitae, nostrum fugiat
+                        reprehenderit officiis ab recusandae porro eum in
+                        eveniet mollitia!
+                      </p>
+                      <a href="#" class="text-secodary text-decoration-none"
+                        >Go Somewhere</a
+                      >
+
+                      <p class="text-black-50">CEO at Google</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-12 text-center">
+            <!-- Card 4 -->
+            <div class="card mr-2 d-inline-block shadow-lg">
+              <div class="card-img-top">
+                <img
+                  src="../assets/UI-face-4.jpeg"
+                  alt="Member"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="card-body">
+                <h3 class="card-title">Oilvia Louis</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Aperiam sunt harum necessitatibus sit voluptatem quasi eius
+                  eaque repellendus vitae, nostrum fugiat reprehenderit officiis
+                  ab recusandae porro eum in eveniet mollitia!
+                </p>
+                <a href="#" class="text-secodary text-decoration-none"
+                  >Go Somewhere</a
+                >
+
+                <p class="text-black-50">CEO at Google</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="container-fluid p-0">
+        <div class="row text-left">
+          <div class="col-md-5 col-md-5">
+            <h1 class="text-light">About Us</h1>
+            <p class="text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+              perspiciatis ullam deserunt?
+            </p>
+            <p class="pt-4 text-muted">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex,
+              <span>Daily Work</span>
+            </p>
+          </div>
+
+          <div class="col-md-5">
+            <h4 class="text-light">Newsletter</h4>
+            <p>Stay Updated</p>
+            <form class="form-inline">
+              <div class="col pl-">
+                <div class="input-group pr-5">
+                  <input
+                    type="text"
+                    class="form-control bg-dark text-white"
+                    placeholder="Email"
+                  />
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <i class="fas fa-arrow-right"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+
+          <div class="col-md-2 col-sm-12">
+            <h4 class="text-light">Follow Us</h4>
+            <p class="text-muted">let us be social</p>
+            <div class="column text-dark">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-youtube"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- link -->
     <script
