--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
       <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Books</a>
+            <a class="navbar-brand" href="#"></a>
+              <i class="fas fa-book-reader fa-3x mx-3"></i>Books
+            </a>
             <button
               class="navbar-toggler"
               type="button"
