--- a/src/index.html
+++ b/src/index.html
@@ -108,32 +108,24 @@
       <!-- Section 1 -->
       <section class="section-1">
         <div class="container text-center">
-          <!-- Columns row -->
           <div class="row">
-            <!-- columns with the space of six columnssss -->
-            <div class="col-md-6">
-              <div class="col-md-6">
-                <div class="pray">
-                  <img src="../assets/pexels-photo-1904769.jpeg" alt="Prey" />
-                </div>
+            <div class="col-md-6 col-12">
+              <div class="pray">
+                <img src="../assets/pexels-photo-1904769.jpeg" alt="Pray" class="" />
               </div>
             </div>
-            <div class="col-md-6">
-              <!-- align tex-tleft -->
+            <div class="col-md-6 col-12">
               <div class="panel text-left">
-                <div class="pray">
-                  <h1>Mr. Kings Smite</h1>
-                  <p class="pt-4">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-                    saepe qui corrupti magni, debitis numquam fugiat inventore
-                    deserunt facilis, soluta natus.
-                  </p>
-                  <p class="pt-4">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. At
-                    consequatur blanditiis quos, ullam, ratione ipsum architecto
-                    laboriosam, nesciunt ipsa quae dignissimos.
-                  </p>
-                </div>
+                <h1>Mr. King Smith</h1>
+                <p class="pt-4">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere iure adipisci harum ducimus accusantium, repudiandae aperiam
+                  voluptatum, id ex ratione omnis reiciendis possimus officiis.
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi vitae, tenetur quidem eum aliquid vel labore sint placeat
+                  ad deserunt consectetur fugit ullam. Eius unde neque ducimus obcaecati ipsum quos vero totam recusandae hic
+                  expedita nemo sit, illum harum. Quisquam impedit ullam itaque facere et ad molestiae quod reprehenderit excepturi!
+                </p>
               </div>
             </div>
           </div>
