--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
           <div class="row">
             <div class="col-md-6 col-12">
               <div class="pray">
-                <img src="../assets/pexels-photo-1904769.jpeg" alt="Pray" class="" />
+                <img src="../assets/pexels-photo-1904769.jpeg" alt="Pray" />
               </div>
             </div>
             <div class="col-md-6 col-12">
