--- a/src/index.html
+++ b/src/index.html
@@ -265,9 +265,9 @@
         <div class="platform row">
           <div class="col-md-6 col-sm-12 text-right">
             <div class="desktop shadow-lg">
-              <div class="d-flex-row justify-content-center">
+              <div class="d-flex flex-row justify-content-center">
                 <!-- fa-3x font-size / padding-top py / padding-right -->
-                <i class="fas fa-desktop fa-3x py-2 pr-3"></i>
+                <i class="fas fa-desktop fa-3x py-2 pr-5 p-2"></i>
                 <div class="text text-left">
                   <!-- padding-top / margin 0 -->
                   <h3 class="pt-1 m-0">Desktop</h3>
@@ -278,9 +278,9 @@
           </div>
           <div class="col-md-6 col-sm-12 text-left">
             <div class="desktop shadow-lg">
-              <div class="d-flex-row justify-content-center">
+              <div class="d-flex flex-row justify-content-center">
                 <!-- fa-3x font-size / padding-top py / padding-right -->
-                <i class="fas fa-mobile-alt fa-3x py-2 pr-3"></i>
+                <i class="fas fa-mobile-alt fa-3x py-2 pr-3 p-2"></i>
                 <div class="text text-left">
                   <!-- padding-top / margin 0 -->
                   <h3 class="pt-1 m-0">On Mobile</h3>
