--- a/src/index.html
+++ b/src/index.html
@@ -295,132 +295,87 @@
       <!-- Section Four -->
       <section class="section-4">
         <div class="container text-center">
-          <h1 class="text-dark">What out Reader's Say About Us</h1>
+          <h1 class="text-dark">What our Reader's Say about us</h1>
           <p class="text-secondary">Lorem ipsum dolor sit amet.</p>
         </div>
-
-        <div class="team row">
+        <div class="team row ">
           <div class="col-md-4 col-12 text-center">
-            <div class="card mr-2 d-inline-block shadow-lg">
-              <div class="card-img-top">
-                <img
-                  src="../assets/UI-face-2.jpeg"
-                  alt="Member"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="card-body">
-                <h3 class="card-title">Blalock Jolene</h3>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Aperiam sunt harum necessitatibus sit voluptatem quasi eius
-                  eaque repellendus vitae, nostrum fugiat reprehenderit officiis
-                  ab recusandae porro eum in eveniet mollitia!
-                </p>
-                <a href="#" class="text-secodary text-decoration-none"
-                  >Go Somewhere</a
-                >
-
-                <p class="text-black-50">CEO at Google</p>
-              </div>
-            </div>
+              <div class="card mr-2 d-inline-block shadow-lg">
+                  <div class="card-img-top">
+                    <img src="../assets/UI-face-3.jpeg" class="img-fluid border-radius p-4" alt="image">
+                  </div>
+                  <div class="card-body">
+                    <h3 class="card-title">Blalock Jolene</h3>
+                    <p class="card-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae, veniam, illo dolor soluta assumenda
+                      minima quia velit officia sit exercitationem nam ipsa, repellendus aut facilis quasi voluptas!
+                    </p>
+                    <a href="#" class="text-secondary text-decoration-none">Go somewhere</a>
+                    <p class="text-black-50">CEO at Google</p>
+                  </div>
+                </div>
           </div>
-
           <div class="col-md-4 col-12">
-            <!-- Carousel Started -->
-            <div
-              id="carouselExampleSlidesOnly"
-              class="carousel slide"
-              data-bs-ride="carousel"
-            >
-              <div class="carousel-inner">
-                <div class="carousel-item active text-center">
-                  <!-- Card 2 -->
-
-                  <div class="card mr-2 d-inline-block shadow-lg">
-                    <div class="card-img-top">
-                      <img
-                        src="../assets/UI-face-1.jpeg"
-                        alt="Member"
-                        class="img-fluid"
-                      />
+              <div id="carouselExampleControls" class="carousel slide " data-ride="carousel">
+                  <div class="carousel-inner text-center">
+                    <div class="carousel-item active">
+                      <div class="card mr-2 d-inline-block shadow">
+                        <div class="card-img-top">
+                          <img src="../assets/UI-face-1.jpeg" class="img-fluid rounded-circle w-50 p-4" alt="image">
+                        </div>
+                        <div class="card-body">
+                          <h3 class="card-title">Allen Agnes</h3>
+                          <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae, veniam, illo dolor soluta assumenda
+                            minima quia velit officia sit exercitationem nam ipsa, repellendus aut facilis quasi voluptas!
+                          </p>
+                          <a href="#" class="text-secondary text-decoration-none">Go somewhere</a>
+                          <p class="text-black-50">CEO at Google</p>
+                        </div>
+                      </div>
                     </div>
-                    <div class="card-body">
-                      <h3 class="card-title">Mark Allen</h3>
-                      <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Aperiam sunt harum necessitatibus sit voluptatem
-                        quasi eius eaque repellendus vitae, nostrum fugiat
-                        reprehenderit officiis ab recusandae porro eum in
-                        eveniet mollitia!
-                      </p>
-                      <a href="#" class="text-secodary text-decoration-none"
-                        >Go Somewhere</a
-                      >
-
-                      <p class="text-black-50">CEO at Google</p>
+                    <div class="carousel-item">
+                      <div class="card  d-inline-block mr-2 shadow">
+                        <div class="card-img-top">
+                          <img src="../assets/UI-face-2.jpeg" class="img-fluid rounded-circle w-50 p-4" alt="image">
+                        </div>
+                        <div class="card-body">
+                          <h3 class="card-title">Amiel Barbara</h3>
+                          <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae, veniam, illo dolor soluta assumenda
+                            minima quia velit officia sit exercitationem nam ipsa, repellendus aut facilis quasi voluptas!
+                          </p>
+                          <a href="#" class="text-secondary text-decoration-none">Go somewhere</a>
+                          <p class="text-black-50">CEO at Google</p>
+                        </div>
+                      </div>
                     </div>
-                  </div>
                 </div>
-                <div class="carousel-item">
-                  <!-- Card 3 -->
-                  <div class="card mr-2 d-inline-block shadow-lg">
-                    <div class="card-img-top">
-                      <img
-                        src="../assets/UI-face-4.jpeg"
-                        alt="Member"
-                        class="img-fluid"
-                      />
-                    </div>
-                    <div class="card-body">
-                      <h3 class="card-title">Ana Allen</h3>
-                      <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Aperiam sunt harum necessitatibus sit voluptatem
-                        quasi eius eaque repellendus vitae, nostrum fugiat
-                        reprehenderit officiis ab recusandae porro eum in
-                        eveniet mollitia!
-                      </p>
-                      <a href="#" class="text-secodary text-decoration-none"
-                        >Go Somewhere</a
-                      >
-
-                      <p class="text-black-50">CEO at Google</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
-
+          </div>
           <div class="col-md-4 col-12 text-center">
-            <!-- Card 4 -->
-            <div class="card mr-2 d-inline-block shadow-lg">
-              <div class="card-img-top">
-                <img
-                  src="../assets/UI-face-4.jpeg"
-                  alt="Member"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="card-body">
-                <h3 class="card-title">Oilvia Louis</h3>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Aperiam sunt harum necessitatibus sit voluptatem quasi eius
-                  eaque repellendus vitae, nostrum fugiat reprehenderit officiis
-                  ab recusandae porro eum in eveniet mollitia!
-                </p>
-                <a href="#" class="text-secodary text-decoration-none"
-                  >Go Somewhere</a
-                >
-
-                <p class="text-black-50">CEO at Google</p>
-              </div>
-            </div>
+              <div class="card mr-2 d-inline-block shadow-lg">
+                  <div class="card-img-top">
+                    <img src="../assets/UI-face-4.jpeg" class="img-fluid border-radius p-4" alt="image">
+                  </div>
+                  <div class="card-body">
+                    <h3 class="card-title">Olivia Louis</h3>
+                    <p class="card-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae, veniam, illo dolor soluta assumenda
+                      minima quia velit officia sit exercitationem nam ipsa, repellendus aut facilis quasi voluptas!
+                    </p>
+                    <a href="#" class="text-secondary text-decoration-none">Go somewhere</a>
+                    <p class="text-black-50">CEO at Google</p>
+                  </div>
+                </div>
           </div>
         </div>
       </section>
+
+       
+        
+
+
     </main>
 
     <footer>
