added footer styles

--- a/src/index.html
+++ b/src/index.html
@@ -397,7 +397,7 @@
             <h4 class="text-light">Newsletter</h4>
             <p>Stay Updated</p>
             <form class="form-inline">
-              <div class="col pl-">
+              <div class="col pl-0">
                 <div class="input-group pr-5">
                   <input
                     type="text"
