added mobile responsible and header sticky

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/mobile.styles.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -38,7 +39,7 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon"></span>
+            <i class="fas fa-align-right text-light"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <!-- mr-auto margin: auto; -->
@@ -388,7 +389,7 @@
               perspiciatis ullam deserunt?
             </p>
             <p class="pt-4 text-muted">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex,
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
               <span>Daily Work</span>
             </p>
           </div>
@@ -445,5 +446,6 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+    <script src="./main.js"></script>
   </body>
 </html>
